[fixed] UI & [feat] responsive on mobile

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -3,7 +3,8 @@
   --text-dark-color: #1b1b1b;
   --text-light-color: #707070;
   --border-color: #f2f2f2;
-  --background-hover-color:#f1f1f1;
+  --background-hover-dark-color: #f1f1f1;
+  --background-hover-light-color: #f7f7f7;
 }
 
 * {
@@ -13,7 +14,7 @@
 html {
   font-size: 62.5%;
   line-height: 1.6rem;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: sans-serif;
   box-sizing: border-box;
 }
 
@@ -21,7 +22,7 @@ body {
   margin: 0;
 }
 
-.row{
+.row {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
