--- a/assets/css/container.css
+++ b/assets/css/container.css
@@ -8,12 +8,12 @@
   display: flex;
   align-items: center;
   position: sticky;
-  top: 78px;
+  top: 80px;
   background-color: #fff;
   z-index: 1;
 }
 
-.category::before{
+.category::before {
   content: "";
   position: absolute;
   left: -8px;
@@ -24,7 +24,7 @@
 }
 
 .category__list {
-  padding-bottom: 20px;
+  padding-bottom: 16px;
   display: flex;
   align-items: center;
   width: 75%;
@@ -66,24 +66,27 @@
   width: 30px;
   aspect-ratio: 1;
   opacity: 0.5;
+  transition: opacity ease 0.1s;
 }
 
 .category__item-text {
   color: var(--text-light-color);
   font-weight: 600;
   font-size: 1.2rem;
+  transition: color ease 0.1s;
 }
 
 .category__button {
   width: 25%;
   display: flex;
   align-items: center;
+  padding-bottom: 16px;
 }
 
 .category__button-switch {
   width: 40px;
   aspect-ratio: 1;
-  border: 1px solid #999;
+  border: 1px solid #e2e2e2;
   border-radius: 50px;
   display: flex;
   justify-content: center;
@@ -95,26 +98,28 @@
 
 .category__button-switch:hover {
   transform: scale(1.1);
-  box-shadow: 0 1px 1px #999;
+  box-shadow: 0 8px 12px rgba(0, 0, 0, 0.15);
   cursor: pointer;
 }
 
 .category__button-filter {
-  padding: 12px;
-  border: 1px solid #999;
-  border-radius: 30px;
+  padding: 16px;
+  border: 1px solid #e2e2e2;
+  border-radius: 10px;
   font-weight: 600;
   font-size: 1.4rem;
+  transition: all ease 0.2s;
 }
 
 .category__button-filter:hover {
   cursor: pointer;
-  background-color: var(--background-hover-color);
+  background-color: var(--background-hover-light-color);
+  border: 1px solid #666;
 }
 
 /* Cac lua chon phong */
 .product {
-
+  padding-top: 16px;
   display: flex;
   justify-content: center;
 }
@@ -181,7 +186,7 @@
 .product__item-info--desc {
   padding: 4px;
   color: var(--text-light-color);
-  font-size: 1.2rem;
+  font-size: 1.4rem;
 }
 
 .product__item-info--footer {
@@ -205,7 +210,6 @@
   flex-direction: column;
   align-items: center;
   padding-bottom: 40px;
-
 }
 
 .container__footer div {
